# eurika_2.0

./: .cursorignore  .gitignore  Architecture.md  CHANGELOG.md  CLI.md  CYCLE_REPORT.md  DOGFOODING.md  FEEDBACK.md  README.md  REPORT.md  ROADMAP.md  SPEC.md  UI.md  action_plan.py  action_plan_api.py  action_plan_extracted.py  agent_core.py  agent_core_arch_review.py  agent_core_arch_review_archreviewagentcore.py  agent_core_extracted.py  agent_runtime.py  architecture_advisor.py  architecture_diagnostics.py  architecture_diff.py  architecture_feedback.py  architecture_health.py  architecture_history.json  architecture_history.py  architecture_learning.json  architecture_learning.py  architecture_pipeline.py  architecture_planner.py  architecture_planner_build_action_plan.py  architecture_planner_build_patch_plan.py  architecture_planner_build_plan.py  architecture_smells.py  architecture_summary.py  code_awareness.py  code_awareness_api.py  code_awareness_codeawarenessextracted.py  (+32 more)
.cursor/rules/: venv.mdc
.eurika/rules/: docs.mdc  pre-commit.mdc  test-api.mdc  venv.mdc
.github/workflows/: ci.yml
_shelved/: README.md
cli/: __init__.py  agent_handlers.py  agent_handlers_handle_agent_patch_apply.py  core_handlers.py  core_handlers_arch.py  core_handlers_clean.py  core_handlers_common.py  core_handlers_doctor.py  core_handlers_explain.py  core_handlers_fix_cycle.py  core_handlers_learn.py  core_handlers_report.py  core_handlers_scan.py  core_handlers_serve.py  core_handlers_watch.py  core_handlers_whitelist.py  handlers.py  orchestrator.py  orchestrator_run_doctor_cycle.py  orchestrator_run_fix_cycle.py
cli/orchestration/: __init__.py  apply_stage.py  contracts.py  cycle_state.py  deps.py  doctor.py  facade.py  fix_cycle_impl.py  full_cycle.py  hybrid_approval.py  logging.py  models.py  prepare.py  team_mode.py
cli/wiring/: __init__.py  dispatch.py  parser.py
core/: __init__.py  pipeline.py  snapshot.py
docs/: API_BOUNDARIES.md  Architecture.md  CLI.md  CYCLE_REPORT.md  DEPENDENCIES.md  DEPENDENCY_FIREWALL.md  DOGFOODING.md  EDGE_CASE_MATRIX.md  FALLBACK_AUDIT.md  KNOWLEDGE_LAYER.md  KPI_VERIFY_SUCCESS_RATE_PLAN.md  LOGGING_R2.md  MIGRATION_WEB_TO_QT.md  OPERABILITY_D_PLAN.md  POLYGON_VERIFY_PLAYBOOK.md  POLYGON_VERIFY_TIMEOUT.md  R1_DOMAIN_PRESENTATION_AUDIT.md  R2_FALLBACK_AUDIT.md  R2_LOGGING.md  R4_MODULAR_PLATFORM_PLAN.md  R5_PLUGIN_INTERFACE.md  R5_STRATEGIC_HORIZON_PLAN.md  README.md  RELEASE_CHECKLIST.md  REPORT.md  ROADMAP.md  SPEC.md  THEORY.md  TYPING_CONTRACT.md  TYPING_CONTRACT_R3.md  UI.md  curated_repos.example.json  eurika_knowledge.example.json  review.md
docs/archive/: AGENT_DESIGN_v0.2.md  AUDIT.md  README.md  SPEC_v0.2_draft.md  SPEC_v0.3_draft.md  SPEC_v0.4_draft.md  V01_MINIMAL_PROPOSAL.md  eurika_v_1.md
eurika/: __init__.py  polygon.py
eurika/agent/: __init__.py  config.py  models.py  policy.py  runtime.py  tool_contract.py  tool_contract_extracted.py  tool_contract_toolcontract.py  tools.py
eurika/analysis/: __init__.py  cycles.py  graph.py  metrics.py  scanner.py  self_map.py  topology.py
eurika/api/: __init__.py  architecture.py  chat.py  chat_context.py  chat_direct.py  chat_handlers.py  chat_intent.py  chat_intents_config.py  chat_prompt.py  chat_rag.py  chat_tools.py  chat_utils.py  diff_api.py  explain_api.py  learning_api.py  ops.py  roadmap_verify.py  serve.py  serve_exec.py  serve_routes_get.py  serve_routes_post.py  serve_utils.py  task_executor.py  task_executor_executors.py  task_executor_helpers.py  task_executor_patch.py  task_executor_types.py  team_api.py
eurika/checks/: __init__.py  dependency_firewall.py  file_size.py  self_guard.py
eurika/core/: __init__.py  pipeline.py  snapshot.py
eurika/evolution/: __init__.py  diff.py  history.py
eurika/knowledge/: __init__.py  base.py  topics.py
eurika/learning/: __init__.py  curated_repos.py  github_search.py  pattern_library.py
eurika/orchestration/: __init__.py  apply_stage.py  contracts.py  cycle_state.py  deps.py  doctor.py  entry.py  facade.py  fix_cycle_apply_approved.py  fix_cycle_helpers.py  fix_cycle_impl.py  logging.py  pipeline_model.py  prepare.py
eurika/plugins/: __init__.py  aggregate.py  protocol.py  registry.py
eurika/polygon/: __init__.py  deep_nesting.py  extractable_block.py  imports_ok.py  long_function.py  long_function_extractable_block.py
eurika/reasoning/: __init__.py  advisor.py  architect.py  context_sources.py  graph_ops.py  heuristics.py  planner.py  planner_actions.py  planner_analysis.py  planner_llm.py  planner_patch_ops.py  planner_rules.py  planner_types.py  refactor_plan.py  risk_prediction.py
eurika/refactor/: __init__.py  extract_class.py  extract_function.py  fix_import_from_verify.py  introduce_facade.py  remove_import.py  remove_unused_import.py  split_module.py
eurika/ui/: app.js  (+1 more)
qt_app/: __init__.py  main.py
report/: __init__.py  architect_format.py  architecture_report.py  explain_format.py  report_snapshot.py  suggest_plan_format.py  ux.py
scripts/: release_check.sh
tests/: conftest.py  test_agent_core_arch_review.py  test_agent_handlers_decision_summary.py  test_agent_policy.py  test_agent_runtime.py  test_analysis_package_imports.py  test_api.py  test_api_serve.py  test_architect.py  test_architecture_advisor.py  test_architecture_diagnostics.py  test_architecture_feedback.py  test_architecture_health.py  test_architecture_history.py  test_architecture_learning.py  test_architecture_smells.py  test_campaign_checkpoint.py  test_campaign_flow.py  test_chat_api.py  test_chat_api_apply.py  test_chat_api_history.py  test_chat_intent.py  test_chat_rag.py  test_chat_task_interpreter.py  test_clean_imports_cli.py  test_cli_env.py  test_cli_runtime_mode.py  test_context_sources.py  test_cycle.py  test_cycle_report.py  test_cycle_state.py  test_cycle_test_apply_campaign_memory_filters_rejected_ops.py  test_dependency_firewall.py  test_dependency_guard.py  test_eurika_polygon_long_function.py  test_evolution_diff.py  test_executor_sandbox.py  test_explainability.py  test_extract_class.py  test_extract_function.py  (+35 more)
(+53 files in other folders)
