[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eurika"
version = "3.0.8"
description = "Eurika — decision-gated architecture analysis and refactoring assistant"
readme = "README.md"
requires-python = ">=3.9"

[tool.eurika]
verify_timeout = 300

[project.optional-dependencies]
llm = ["openai>=1.0"]
env = ["python-dotenv>=1.0"]
test = ["pytest>=7.0"]
typecheck = ["mypy>=1.10"]

[project.scripts]
eurika = "eurika_cli:main"

[tool.setuptools]
py-modules = ["eurika_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "cli.orchestration.prepare",
  "cli.orchestration.apply_stage",
  "cli.orchestration.fix_cycle_impl",
  "cli.orchestration.hybrid_approval",
  "cli.orchestration.full_cycle",
  "cli.orchestration.facade",
  "cli.orchestration.doctor",
  "cli.orchestration.team_mode",
  "cli.orchestration.deps",
  "cli.orchestrator",
  "cli.wiring.parser",
  "cli.wiring.dispatch",
  "cli.core_handlers",
  "cli.handlers",
  "eurika.api.__init__",
  "eurika.api.serve",
  "cli.orchestration.models",
  "eurika.agent.models",
  "eurika.agent.config",
  "eurika.agent.policy",
  "eurika.agent.tools",
  "eurika.storage.session_memory",
  "eurika.storage.event_views",
  "eurika.storage.event_engine",
  "eurika.storage.memory",
]
check_untyped_defs = true
disallow_incomplete_defs = true
