[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eurika"
version = "3.0.8"
description = "Eurika — decision-gated architecture analysis and refactoring assistant"
readme = "README.md"
requires-python = ">=3.9"

[tool.eurika]
verify_timeout = 300

[project.optional-dependencies]
llm = ["openai>=1.0"]
env = ["python-dotenv>=1.0"]
test = ["pytest>=7.0"]
typecheck = ["mypy>=1.10"]

[project.scripts]
eurika = "eurika_cli:main"

[tool.setuptools]
py-modules = ["eurika_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "cli.orchestration.prepare",
  "cli.orchestration.apply_stage",
  "cli.orchestration.fix_cycle_impl",
  "cli.orchestration.hybrid_approval",
  "cli.orchestration.full_cycle",
  "cli.orchestration.facade",
  "cli.orchestration.doctor",
  "cli.orchestration.team_mode",
  "cli.orchestration.deps",
  "cli.orchestrator",
  "cli.wiring.parser",
  "cli.wiring.dispatch",
  "cli.core_handlers",
  "cli.handlers",
  "eurika.api.__init__",
  "eurika.api.serve",
  "cli.orchestration.models",
  "eurika.agent.models",
  "eurika.agent.config",
  "eurika.agent.policy",
  "eurika.agent.tools",
  "eurika.storage.session_memory",
  "eurika.storage.event_views",
  "eurika.storage.event_engine",
  "eurika.storage.memory",
  "eurika.storage.__init__",
  "eurika.storage.persistence",
  "eurika.storage.paths",
  "eurika.storage.operational_metrics",
  "eurika.learning.__init__",
  "eurika.learning.github_search",
  "eurika.learning.pattern_library",
  "eurika.learning.curated_repos",
  "eurika.knowledge.__init__",
  "eurika.knowledge.base",
  "eurika.reasoning.architect",
  "eurika.reasoning.context_sources",
  "eurika.reasoning.planner_patch_ops",
  "eurika.reasoning.graph_ops",
  "eurika.agent.runtime",
  "eurika.agent.tool_contract",
  "eurika.agent.tool_contract_extracted",
  "eurika.agent.tool_contract_toolcontract",
  "eurika.evolution.__init__",
  "eurika.evolution.diff",
  "eurika.evolution.history",
  "eurika.smells.__init__",
  "eurika.smells.detector",
  "eurika.smells.models",
  "eurika.smells.rules",
  "eurika.smells.summary",
  "eurika.smells.advisor",
  "eurika.smells.health",
  "eurika.core.__init__",
  "eurika.core.snapshot",
  "eurika.core.pipeline",
  "eurika.analysis.__init__",
  "eurika.analysis.cycles",
  "eurika.analysis.metrics",
  "eurika.analysis.topology",
  "eurika.analysis.self_map",
  "eurika.analysis.scanner",
  "eurika.analysis.graph",
  "eurika.reporting.__init__",
  "eurika.reporting.json",
  "eurika.reporting.markdown",
  "eurika.reporting.text",
  "eurika.__init__",
  "eurika.agent.__init__",
  "eurika.reasoning.__init__",
  "eurika.refactor.__init__",
  "eurika.checks.__init__",
  "eurika.checks.dependency_firewall",
  "eurika.checks.file_size",
  "eurika.utils.__init__",
  "eurika.utils.fs",
  "eurika.utils.logging",
  "eurika.storage.events",
  "eurika.storage.global_memory",
  "eurika.storage.campaign_checkpoint",
]
check_untyped_defs = true
disallow_incomplete_defs = true
