[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eurika"
version = "3.0.26"
description = "Eurika — Qt-first architecture analysis and refactoring assistant. CLI/API core, desktop UI (eurika-qt): Commands, Dashboard, Approvals, Models (Ollama), Chat with Apply/Reject."
readme = "README.md"
requires-python = ">=3.10"

[tool.eurika]
verify_timeout = 300
# Fast verify for polygon/low-risk cycles (full pytest >300s); override via --verify-cmd to run full suite
verify_cmd = ".venv/bin/python -m pytest tests/test_clean_imports_cli.py tests/test_remove_unused_import.py tests/test_extract_function.py -q"

[tool.pytest.ini_options]
markers = [
    "edge_case: R3 edge-case matrix — empty/huge input, model/network error, memory write",
]
addopts = "-ra -q"

[project.optional-dependencies]
llm = ["openai>=1.0", "litellm>=1.0"]
env = ["python-dotenv>=1.0"]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
qt = ["PySide6>=6.6", "PySide6-Addons>=6.6"]
typecheck = ["mypy>=1.10"]
# Refactor: libcst для round-trip AST (сохранение комментариев и форматирования)
refactor = ["libcst>=1.0"]
# CLI: rich для прогресс-баров, таблиц, подсветки вывода
cli = ["rich>=13.0"]
# Дополнительные утилиты (watchdog, ruff, structlog, ollama, pydantic)
extras = ["pydantic>=2.0", "watchdog>=4.0", "ruff>=0.8", "structlog>=24.0", "ollama>=0.3"]
# Всё вместе (для установки: pip install -e ".[test,qt,refactor,cli,extras]")
full = [
    "openai>=1.0", "litellm>=1.0", "python-dotenv>=1.0", "pytest>=7.0",
    "PySide6>=6.6", "libcst>=1.0", "rich>=13.0",
    "pydantic>=2.0", "watchdog>=4.0", "ruff>=0.8", "structlog>=24.0", "ollama>=0.3",
]

[project.scripts]
eurika = "eurika_cli:main"
eurika-qt = "qt_app.main:main"

[tool.setuptools]
py-modules = ["eurika_cli", "code_awareness", "runtime_scan", "architecture_pipeline"]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
pretty = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = [
  "cli.orchestration.prepare",
  "cli.orchestration.apply_stage",
  "cli.orchestration.fix_cycle_impl",
  "cli.orchestration.hybrid_approval",
  "cli.orchestration.full_cycle",
  "cli.orchestration.facade",
  "cli.orchestration.doctor",
  "cli.orchestration.team_mode",
  "cli.orchestration.deps",
  "cli.orchestrator",
  "cli.wiring.parser",
  "cli.wiring.dispatch",
  "cli.core_handlers",
  "cli.handlers",
  "eurika.api.__init__",
  "eurika.api.serve",
  "cli.orchestration.models",
  "eurika.agent.models",
  "eurika.agent.config",
  "eurika.agent.policy",
  "eurika.agent.tools",
  "eurika.storage.session_memory",
  "eurika.storage.event_views",
  "eurika.storage.event_engine",
  "eurika.storage.memory",
  "eurika.storage.__init__",
  "eurika.storage.persistence",
  "eurika.storage.paths",
  "eurika.storage.operational_metrics",
  "eurika.learning.__init__",
  "eurika.learning.github_search",
  "eurika.learning.pattern_library",
  "eurika.learning.curated_repos",
  "eurika.knowledge.__init__",
  "eurika.knowledge.base",
  "eurika.reasoning.architect",
  "eurika.reasoning.context_sources",
  "eurika.reasoning.planner_patch_ops",
  "eurika.reasoning.graph_ops",
  "eurika.agent.runtime",
  "eurika.agent.tool_contract",
  "eurika.agent.tool_contract_extracted",
  "eurika.agent.tool_contract_toolcontract",
  "eurika.evolution.__init__",
  "eurika.evolution.diff",
  "eurika.evolution.history",
  "eurika.smells.__init__",
  "eurika.smells.detector",
  "eurika.smells.models",
  "eurika.smells.rules",
  "eurika.smells.summary",
  "eurika.smells.advisor",
  "eurika.smells.health",
  "eurika.core.__init__",
  "eurika.core.snapshot",
  "eurika.core.pipeline",
  "eurika.analysis.__init__",
  "eurika.analysis.cycles",
  "eurika.analysis.metrics",
  "eurika.analysis.topology",
  "eurika.analysis.self_map",
  "eurika.analysis.scanner",
  "eurika.analysis.graph",
  "eurika.reporting.__init__",
  "eurika.reporting.json",
  "eurika.reporting.markdown",
  "eurika.reporting.text",
  "eurika.__init__",
  "eurika.agent.__init__",
  "eurika.reasoning.__init__",
  "eurika.refactor.__init__",
  "eurika.checks.__init__",
  "eurika.checks.dependency_firewall",
  "eurika.checks.file_size",
  "eurika.utils.__init__",
  "eurika.utils.fs",
  "eurika.utils.logging",
  "eurika.storage.events",
  "eurika.storage.global_memory",
  "eurika.storage.campaign_checkpoint",
]
check_untyped_defs = true
disallow_incomplete_defs = true
